force-app/main/default/objects/CM_Players__c/CM_Players__c.object-meta.xml
<CustomObject>
    <label>CM Player</label>
    <nameField>
        <label>Players Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>