force-app/main/default/objects/CM_Players__c/fields/CM_Avatar_File__c.field-meta.xml
<CustomField>
    <fullName>CM_Avatar_File__c</fullName>
    <defaultValue>&quot;default.png&quot;</defaultValue>
    <label>Avatar File</label>
    <length>80</length>
    <type>Text</type>
</CustomField>