force-app/main/default/objects/CM_Players__c/fields/CM_ELO_Rank__c.field-meta.xml
<CustomField>
    <fullName>CM_ELO_Rank__c</fullName>
    <label>ELO Rank</label>
    <summarizedField>CM_Elo_Receipt__c.CM_ELO_Change__c</summarizedField>
    <summaryForeignKey>CM_Elo_Receipt__c.CM_Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>