force-app/main/default/objects/CM_Players__c/fields/CM_ELO_Slip_Count__c.field-meta.xml
<CustomField>
    <fullName>CM_ELO_Slip_Count__c</fullName>
    <label>ELO Slip Count</label>
    <summaryForeignKey>CM_Elo_Receipt__c.CM_Player__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>