force-app/main/default/objects/CM_Players__c/fields/CM_Rank__c.field-meta.xml
<CustomField>
    <fullName>CM_Rank__c</fullName>
    <label>Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>