force-app/main/default/objects/CM_Players__c/fields/CM_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>CM_Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>CM_Tournament_Result__c.CM_Points_Earned__c</summarizedField>
    <summaryForeignKey>CM_Tournament_Result__c.CM_Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>